# treemark

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: test.yml
src/treemark/: cli.py  core.py
tests/: test_cli.py  test_core.py
