[project]
name = "treemark"
version = "0.1.0"
description = "Generate markdown tree of project folder structure"
authors = [{ name = "Aviraj Saha", email = "aviraj.saha@outlook.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.6"

[project.scripts]
treemark = "treemark.cli:main"  # CLI entry point

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "src/treemark.egg-info*"]

